change monitor to run every 1 hour

--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -3,7 +3,7 @@ name: Generate changes
 on:
   workflow_dispatch: {}
   schedule:
-    - cron: "*/30 * * * *"
+    - cron: "0 * * * *"
 
 jobs:
   build:
